fixed spacing

--- a/css/list.css
+++ b/css/list.css
@@ -134,6 +134,7 @@ body {
 
 .graph-message {
     max-width: 300px;
+    min-width: 280px;
     word-wrap: break-word;
     margin-left: 0px;
     display: inline-block;
@@ -391,7 +392,7 @@ body {
 
 /* phone */
 @media only screen
-    and (max-width: 500px) {
+    and (max-width: 499px) {
         section {
             width:350px;
             margin: 0 auto;
@@ -407,6 +408,7 @@ body {
 
         .graph-message {
             max-width: 200px;
+            min-width: 190px;
             word-wrap: break-word;
             margin-left: 0px;
         }
@@ -434,6 +436,7 @@ body {
 
         .graph-message {
             max-width: 165px;
+            min-width: 160px;
             word-wrap: break-word;
             margin-left: 0px;
         }
